fix(chat-bubbles): assistant chat bubble background not visible #42
Changes summary:
    - Fixed an issue where the assistant's chat bubble background was no longer visible due to new ChatGPT's changes, improving readability and visual clarity.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -254,7 +254,9 @@ main [data-testid^='conversation-turn-'] {
 		}
 
 		/*   RIGHT - CHATS BUBBLE BG  */
-		& > div:first-child > div:first-child {
+		// & > div:first-child > div:first-child {
+		// & > div.m-auto > div:first-child {
+		& > div.text-base > div:first-child {
 			background-color: var(--c-bg-msg-gpt);
 
 			--pt-multiplier: 1.3;
